packages/shared-skills/skills/programming/fixtures/java/no-excuse/fail/todo-no-owner/TodoNoOwnerCase.java
package sample.bad;

class TodoNoOwnerCase {
    void run() {
        int value = 1;
        // TODO fix this
        value++;
    }
}
